--- a/package.json
+++ b/package.json
@@ -7,11 +7,9 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "test": "jest"
+    "test": "jest --watchAll"
   },
   "dependencies": {
-    "@babel/preset-env": "^7.20.2",
-    "babel-jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
@@ -19,6 +17,7 @@
   },
   "devDependencies": {
     "@babel/plugin-syntax-jsx": "^7.18.6",
+    "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
     "@swc/core": "^1.3.19",
     "@swc/jest": "^0.2.23",
@@ -29,8 +28,10 @@
     "@types/react-dom": "^18.0.8",
     "@vitejs/plugin-react": "^2.2.0",
     "autoprefixer": "^10.4.13",
+    "babel-jest": "^29.3.1",
     "jest": "^29.3.1",
     "postcss": "^8.4.19",
+    "react-test-renderer": "^18.2.0",
     "tailwindcss": "^3.2.4",
     "vite": "^3.2.3"
   },
